syntax = "proto3";

package elgamal;
option go_package = "github.com/jstuczyn/CoconutGo/crypto/elgamal";

// used for serializing data to send them over the wire. It is assumed each BIG, ECP, ECP2, etc 
// were already converted to byte slices using amcl's ToBytes methods.

message ProtoEncryption {
    bytes C1 = 1;
    bytes C2 = 2;
}