syntax = "proto3";
import "crypto/coconut/scheme/proto/types.proto";

// currently empty, but in the future we might want to send some data alongside, like public key?
message VerificationKeyRequest {

}

message VerificationKeyResponse {
    coconut.ProtoVerificationKey VerificationKey = 1;
}

service Issuer {
    rpc GetVerificationKey(VerificationKeyRequest) returns (VerificationKeyResponse);
}

// service Provider {
    // rpc 
// }